(fix)O3-5344: action buttons not visible on tablet view in test order form

--- a/packages/esm-patient-tests-app/src/test-orders/add-test-order/test-order-form.scss
+++ b/packages/esm-patient-tests-app/src/test-orders/add-test-order/test-order-form.scss
@@ -70,6 +70,7 @@
   .orderForm {
     height: calc(100vh - layout.$spacing-12 - var(--workspace-header-height));
     background-color: #ededed;
+    justify-content: flex-start;
   }
 
   .buttonSet {
